--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
 	"type": "module",
 	"scripts": {
 		"start": "node dist/server.js",
-		"dev": "concurrently \"tsc --watch\" \"node --watch dist/server.js\"",
+		"dev": "tsc-watch --onSuccess \"node dist/server.js\"",
 		"build": "tsc",
-		"watch": "tsc --watch"
+		"watch": "tsc --watch",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.758.0",
@@ -28,7 +31,11 @@
 		"@fastify/type-provider-typebox": "^4.0.0",
 		"@sinclair/typebox": "^0.32.15",
 		"@types/node": "^22.13.5",
-		"concurrently": "^9.1.2",
-		"typescript": "^5.7.3"
+		"@types/supertest": "^6.0.2",
+		"c8": "^10.1.3",
+		"supertest": "^7.0.0",
+		"tsc-watch": "^6.2.1",
+		"typescript": "^5.7.3",
+		"vitest": "^3.0.7"
 	}
 }
