--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
 		"@fastify/static": "^8.1.1",
 		"@fastify/swagger": "^9.4.2",
 		"@fastify/swagger-ui": "^5.2.2",
+		"@prisma/client": "^6.4.1",
 		"@types/node-fetch": "^2.6.12",
 		"dotenv": "^16.4.5",
 		"fastify": "^5.2.1",
 		"node-fetch": "3",
-		"pino-pretty": "^10.3.1"
+		"pino-pretty": "^10.3.1",
+		"prisma": "^6.4.1"
 	},
 	"devDependencies": {
 		"@fastify/type-provider-typebox": "^4.0.0",
