--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
 		"@aws-sdk/client-s3": "^3.758.0",
 		"@aws-sdk/s3-request-presigner": "^3.758.0",
 		"@fastify/cors": "^11.0.0",
+		"@fastify/jwt": "^9.0.4",
 		"@fastify/multipart": "^9.0.3",
 		"@fastify/static": "^8.1.1",
 		"@fastify/swagger": "^9.4.2",
 		"@fastify/swagger-ui": "^5.2.2",
 		"@prisma/client": "^6.4.1",
+		"@types/bcryptjs": "^2.4.6",
 		"@types/node-fetch": "^2.6.12",
+		"bcryptjs": "^3.0.2",
 		"dotenv": "^16.4.5",
 		"fastify": "^5.2.1",
+		"fastify-plugin": "^5.0.1",
 		"node-fetch": "3",
 		"pino-pretty": "^10.3.1",
 		"prisma": "^6.4.1"
