--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
 		"fastify-plugin": "^5.0.1",
 		"node-fetch": "3",
 		"pino-pretty": "^10.3.1",
-		"prisma": "^6.4.1"
+		"prisma": "^6.4.1",
+		"@fastify/type-provider-typebox": "^4.0.0",
+		"@sinclair/typebox": "^0.32.15"
 	},
 	"devDependencies": {
-		"@fastify/type-provider-typebox": "^4.0.0",
-		"@sinclair/typebox": "^0.32.15",
 		"@types/node": "^22.13.5",
 		"@types/supertest": "^6.0.2",
 		"c8": "^10.1.3",
