--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"watch": "tsc --watch",
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"test:coverage": "vitest run --coverage"
+		"test:coverage": "vitest run --coverage",
+		"lint": "eslint . --fix"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.758.0",
@@ -26,7 +27,10 @@
 		"@fastify/static": "^8.1.1",
 		"@fastify/swagger": "^9.4.2",
 		"@fastify/swagger-ui": "^5.2.2",
+		"@fastify/type-provider-typebox": "^4.0.0",
 		"@prisma/client": "^6.4.1",
+		"@sinclair/typebox": "^0.32.15",
+		"@stylistic/eslint-plugin-ts": "^4.2.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/node-fetch": "^2.6.12",
 		"bcryptjs": "^3.0.2",
@@ -35,17 +39,19 @@
 		"fastify-plugin": "^5.0.1",
 		"node-fetch": "3",
 		"pino-pretty": "^10.3.1",
-		"prisma": "^6.4.1",
-		"@fastify/type-provider-typebox": "^4.0.0",
-		"@sinclair/typebox": "^0.32.15"
+		"prisma": "^6.4.1"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.22.0",
 		"@types/node": "^22.13.5",
 		"@types/supertest": "^6.0.2",
 		"c8": "^10.1.3",
+		"eslint": "^9.22.0",
+		"globals": "^16.0.0",
 		"supertest": "^7.0.0",
 		"tsc-watch": "^6.2.1",
 		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.26.0",
 		"vitest": "^3.0.7"
 	}
 }
