--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage",
-		"lint": "eslint . --fix"
+		"lint": "eslint . --fix",
+		"studio": "prisma studio"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.758.0",
